Added more bio links.; add data links (to audio and MIDI files).

--- a/_includes/data/Makefile
+++ b/_includes/data/Makefile
@@ -1,5 +1,10 @@
 
 
+
 json:
+	# To install aton2json:
+	#    npm install -g aton
+	#    cd /usr/local/lib/node_modules/aton/example/cli
+	#    make
 	aton2json -p people.aton > people.json
 
