Added bibliography page.

--- a/_includes/data/Makefile
+++ b/_includes/data/Makefile
@@ -1,10 +1,14 @@
 
 
+all: people bib
 
-json:
+people:
 	# To install aton2json:
 	#    npm install -g aton
 	#    cd /usr/local/lib/node_modules/aton/example/cli
 	#    make
 	aton2json -p people.aton > people.json
 
+
+bib:
+	aton2json -p bibliography.aton > bibliography.json
